--- a/AskMate/AskMate/AskMate.csproj
+++ b/AskMate/AskMate/AskMate.csproj
@@ -8,6 +8,10 @@
     <Folder Include="Resources\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.1" />
+  </ItemGroup>
+
 
 
 </Project>
