--- a/AskMate/AskMate/AskMate.csproj
+++ b/AskMate/AskMate/AskMate.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <Folder Include="Resources\" />
+    <Folder Include="wwwroot\Upload\Images\" />
   </ItemGroup>
 
   <ItemGroup>
