--- a/AskMate/AskMate/Properties/launchSettings.json
+++ b/AskMate/AskMate/Properties/launchSettings.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
@@ -12,16 +12,20 @@
       "commandName": "IISExpress",
       "launchBrowser": true,
       "environmentVariables": {
+        "DB_USER": "AskMateUser",
+        "DB_NAME": "askmate",
+        "DB_PASS": "admin",
+        "DB_HOST": "localhost",
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
     "AskMate": {
       "commandName": "Project",
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "https://localhost:5001;http://localhost:5000"
     }
   }
 }
