--- a/AskMate/AskMate/Properties/launchSettings.json
+++ b/AskMate/AskMate/Properties/launchSettings.json
@@ -23,6 +23,10 @@
       "commandName": "Project",
       "launchBrowser": true,
       "environmentVariables": {
+        "DB_USER": "AskMateUser",
+        "DB_NAME": "askmate",
+        "DB_PASS": "admin",
+        "DB_HOST": "localhost",
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "applicationUrl": "https://localhost:5001;http://localhost:5000"
