--- a/AskMate/AskMate/AskMate.csproj
+++ b/AskMate/AskMate/AskMate.csproj
@@ -10,6 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Resources\" />
     <Folder Include="wwwroot\Upload\Images\" />
   </ItemGroup>
 
