--- a/AskMate/AskMate/AskMate.csproj
+++ b/AskMate/AskMate/AskMate.csproj
@@ -6,11 +6,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Resources\**" />
+    <Content Remove="Resources\**" />
+    <EmbeddedResource Remove="Resources\**" />
+    <None Remove="Resources\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Content Remove="wwwroot\Resources\Questions.csv" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Resources\" />
     <Folder Include="wwwroot\Upload\Images\" />
   </ItemGroup>
 
